<resources>
    <string name="app_name">Poland Weather App</string>
    <string name="submit">Submit</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="nama_kota">City Name</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="forecast">Forecast</string>
</resources>